Use fully qualified method name by default for handlers